<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/btnpress">
        <TextView
                android:text="@string/txt_info"
                android:layout_width="0dp"
                android:layout_height="64dp" android:id="@+id/txt_info"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp"
                android:textSize="20sp" android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp" android:textColor="@color/white"/>
        <Switch
                android:layout_width="0dp"
                android:layout_height="82dp" android:id="@+id/spn_storage"
                app:layout_constraintTop_toBottomOf="@+id/txt_info"
                android:layout_marginTop="36dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="250dp"
                android:layout_marginEnd="60dp" app:layout_constraintHorizontal_bias="1.0"
                tools:ignore="DuplicateSpeakableTextCheck" android:clickable="true"
        />
        <Switch
                android:layout_width="0dp"
                android:layout_height="82dp" android:id="@+id/spn_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="250dp"
                android:layout_marginEnd="60dp" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/spn_storage" android:layout_marginTop="12dp"
                android:clickable="true"/>
        <Switch
                android:layout_width="0dp"
                android:layout_height="82dp" android:id="@+id/spn_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="250dp"
                android:layout_marginEnd="60dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/spn_location"
                android:clickable="true"/>
        <Switch
                android:layout_width="0dp"
                android:layout_height="82dp" android:id="@+id/spn_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="250dp"
                android:layout_marginEnd="60dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/spn_camera" android:layout_marginTop="12dp"
                android:clickable="true"/>
        <Switch
                android:layout_width="0dp"
                android:layout_height="82dp" android:id="@+id/spn_contacts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="250dp"
                android:layout_marginEnd="60dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/spn_phone" android:layout_marginTop="12dp"
                android:clickable="true"/>
        <TextView
                android:text="@string/spn_storage"
                android:layout_width="0dp"
                android:layout_height="30dp" android:id="@+id/txt_storage"
                android:layout_marginTop="38dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_info" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spn_storage" android:layout_marginEnd="60dp"
                android:layout_marginStart="48dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp" android:textColor="@color/white"/>
        <TextView
                android:text="@string/spn_location"
                android:layout_width="0dp"
                android:layout_height="30dp" android:id="@+id/txt_location"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/txtx_stora" android:layout_marginTop="12dp"
                app:layout_constraintEnd_toStartOf="@+id/spn_location" android:layout_marginEnd="60dp"
                app:layout_constraintHorizontal_bias="0.0" android:textColor="@color/white"/>
        <TextView
                android:text="@string/spn_camera"
                android:layout_width="0dp"
                android:layout_height="30dp" android:id="@+id/txt_camera"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/spn_camera" android:layout_marginEnd="60dp"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/txtx_loc"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/spn_phone"
                android:layout_width="0dp"
                android:layout_height="30dp" android:id="@+id/txt_phone"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/txtx_cam"
                app:layout_constraintEnd_toStartOf="@+id/spn_phone" android:layout_marginEnd="60dp"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/spn_contacts"
                android:layout_width="0dp"
                android:layout_height="30dp" android:id="@+id/txt_contacts"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/spn_contacts"
                android:layout_marginEnd="60dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/txtx_phon" android:layout_marginTop="15dp"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/txt_stora"
                android:layout_width="174dp"
                android:layout_height="44dp" android:id="@+id/txtx_stora"
                app:layout_constraintTop_toBottomOf="@+id/txt_storage"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toStartOf="@+id/spn_storage"
                android:layout_marginEnd="32dp" android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="48dp"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/txt_loc"
                android:layout_width="0dp"
                android:layout_height="44dp" android:id="@+id/txtx_loc"
                android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/txt_location"
                app:layout_constraintEnd_toStartOf="@+id/spn_location" android:layout_marginEnd="32dp"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/txt_cam"
                android:layout_width="0dp"
                android:layout_height="44dp" android:id="@+id/txtx_cam"
                android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_camera"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toStartOf="@+id/spn_camera"
                android:layout_marginEnd="32dp" android:textColor="@color/white"/>
        <TextView
                android:text="@string/txt_phone"
                android:layout_width="0dp"
                android:layout_height="44dp" android:id="@+id/txtx_phon"
                android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_phone" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/spn_phone" android:layout_marginEnd="32dp"/>
        <TextView
                android:text="@string/txt_conatc"
                android:layout_width="0dp"
                android:layout_height="44dp" android:id="@+id/txtx_contact"
                android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_contacts"
                app:layout_constraintEnd_toStartOf="@+id/spn_contacts" android:layout_marginEnd="32dp"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/txt_phone"
                android:layout_width="0dp"
                android:layout_height="44dp" android:id="@+id/txtx_phon2"
                android:textSize="14sp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_phone" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/spn_phone" android:layout_marginEnd="32dp"
                android:textColor="@color/white"/>
        <Button
                android:text="@string/bt_continue"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/bt_continue"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/spn_contacts" app:layout_constraintVertical_bias="1.0"
                android:textColor="@color/teal_200" android:backgroundTint="@color/btnpress"
                tools:ignore="TextContrastCheck" android:onClick="getInfoForPermission"/>
        <Button
                android:text="@string/bt_cancel"
                android:layout_width="0dp"
                android:layout_height="48dp" android:id="@+id/bt_cancel"
                app:layout_constraintTop_toBottomOf="@+id/txtx_contact"
                app:layout_constraintEnd_toStartOf="@+id/bt_continue" android:layout_marginEnd="20dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/teal_200" android:backgroundTint="@color/btnpress"/>
        <TextView
                android:layout_width="320dp"
                android:layout_height="22dp" android:id="@+id/textView5"
                android:visibility="invisible" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/bt_cancel"
                android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.483"
                tools:visibility="invisible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>