<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShowPermissionActivity" android:background="@color/btnpress">

    <Button
            android:text="@string/spn_location"
            android:layout_width="110dp"
            android:layout_height="0dp" android:id="@+id/btn_storage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:backgroundTint="@color/btnpress" android:textColor="@color/teal_200"/>
    <Button
            android:text="@string/spn_location"
            android:layout_width="110dp"
            android:layout_height="48dp" android:id="@+id/btn_location"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_storage" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:backgroundTint="@color/btnpress" android:textColor="@color/teal_200"/>
    <Button
            android:text="@string/spn_camera"
            android:layout_width="110dp"
            android:layout_height="0dp" android:id="@+id/btn_camera"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_location"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:backgroundTint="@color/btnpress"
            android:textColor="@color/teal_200"/>
    <Button
            android:text="@string/spn_phone"
            android:layout_width="110dp"
            android:layout_height="0dp" android:id="@+id/btn_phone"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:backgroundTint="@color/btnpress"
            android:textColor="@color/teal_200"/>
    <Button
            android:text="@string/spn_contacts"
            android:layout_width="125dp"
            android:layout_height="54dp" android:id="@+id/btn_contacts"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_phone"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="@color/btnpress" android:textColor="@color/teal_200"/>
</androidx.constraintlayout.widget.ConstraintLayout>